ocultar ver y repetir pass

--- a/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.html
+++ b/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.html
@@ -24,9 +24,15 @@
               <ion-item>
                 <ion-label position="floating">Contraseña actual</ion-label>
                 <ion-input
-                  type="password"
+                [type]="isHidden1 ? 'password' : 'text'"
                   formControlName="oldPass"
                 ></ion-input>
+                <ion-icon
+                  [name]="isHidden1 ? 'eye' : 'eye-off'"
+                  slot="end"
+                  (click)="isHidden1 = !isHidden1"
+                  class="iconoOcultarPass"
+                ></ion-icon>
                 <div>
                   <ng-container
                     *ngIf="passForm.get('oldPass').hasError('required') && (passForm.get('oldPass').touched || passForm.get('oldPass').dirty)"
@@ -40,12 +46,40 @@
               <ion-item>
                 <ion-label position="floating">Nueva contraseña</ion-label>
                 <ion-input
-                  type="password"
+                [type]="isHidden2 ? 'password' : 'text'"
                   formControlName="newPass"
                 ></ion-input>
+                <ion-icon
+                  [name]="isHidden2 ? 'eye' : 'eye-off'"
+                  slot="end"
+                  (click)="isHidden2 = !isHidden2"
+                  class="iconoOcultarPass"
+                ></ion-icon>
                 <div>
                   <ng-container
                     *ngIf="passForm.get('newPass').hasError('required') && (passForm.get('newPass').touched || passForm.get('newPass').dirty)"
+                  >
+                    Campo obligatorio
+                  </ng-container>
+                </div>
+              </ion-item>
+
+              <!-- Confirmar pass -->
+              <ion-item>
+                <ion-label position="floating">Confirmar contraseña</ion-label>
+                <ion-input
+                [type]="isHidden3 ? 'password' : 'text'"
+                  formControlName="confirmPass"
+                ></ion-input>
+                <ion-icon
+                  [name]="isHidden3 ? 'eye' : 'eye-off'"
+                  slot="end"
+                  (click)="isHidden3 = !isHidden3"
+                  class="iconoOcultarPass"
+                ></ion-icon>
+                <div>
+                  <ng-container
+                    *ngIf="passForm.get('confirmPass').hasError('required') && (passForm.get('confirmPass').touched || passForm.get('confirmPass').dirty)"
                   >
                     Campo obligatorio
                   </ng-container>
