--- a/scrip-trad/src/app/pages/reset-password/reset-password.page.html
+++ b/scrip-trad/src/app/pages/reset-password/reset-password.page.html
@@ -15,10 +15,16 @@
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="passForm" *ngIf="this.passForm">
-          <!-- Pass actual -->
+          <!-- Pass 1 -->
           <ion-item>
             <ion-label position="floating">Nueva contraseña</ion-label>
-            <ion-input type="password" formControlName="password"></ion-input>
+            <ion-input [type]="isHidden1 ? 'password' : 'text'" formControlName="password"></ion-input>
+            <ion-icon
+                  [name]="isHidden1 ? 'eye' : 'eye-off'"
+                  slot="end"
+                  (click)="isHidden1 = !isHidden1"
+                  class="iconoOcultarPass"
+                ></ion-icon>
             <div>
               <ng-container
                 *ngIf="passForm.get('password').hasError('required') && (passForm.get('password').touched || passForm.get('password').dirty)"
@@ -28,10 +34,16 @@
             </div>
           </ion-item>
 
-          <!-- Pass nueva -->
+          <!-- Pass repetir -->
           <ion-item>
             <ion-label position="floating">Confirma contraseña</ion-label>
-            <ion-input type="password" formControlName="confirmPassword"></ion-input>
+            <ion-input [type]="isHidden2 ? 'password' : 'text'" formControlName="confirmPassword"></ion-input>
+            <ion-icon
+                  [name]="isHidden2 ? 'eye' : 'eye-off'"
+                  slot="end"
+                  (click)="isHidden2 = !isHidden2"
+                  class="iconoOcultarPass"
+                ></ion-icon>
             <div>
               <ng-container
                 *ngIf="passForm.get('confirmPassword').hasError('required') && (passForm.get('confirmPassword').touched || passForm.get('confirmPassword').dirty)"
@@ -41,7 +53,7 @@
             </div>
           </ion-item>
           
-          <ion-button color="primary" expand="block" [disabled]="passForm.invalid" (click)="update();">Confirmar</ion-button>
+          <ion-button color="success" expand="block" [disabled]="passForm.invalid" (click)="update();">Confirmar</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
