--- a/scrip-trad/src/app/pages/reset-password/reset-password.page.scss
+++ b/scrip-trad/src/app/pages/reset-password/reset-password.page.scss
@@ -46,3 +46,16 @@ ion-grid {
 
 }
 
+.iconoOcultarPass {
+    font-size: 16px;
+    padding-top: 4vh;
+    cursor: pointer;
+}
+
+@media (min-width: 992px) {
+    .iconoOcultarPass {
+        font-size: 16px;
+        padding-top: 3vh;
+        cursor: pointer;
+    }
+}
