--- a/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.scss
+++ b/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.scss
@@ -26,3 +26,17 @@ ion-icon {
     margin-left: 5vw;
     font-size: 20px;
 }
+
+.iconoOcultarPass {
+    font-size: 16px;
+    padding-top: 4vh;
+    cursor: pointer;
+}
+
+@media (min-width: 992px) {
+    .iconoOcultarPass {
+        font-size: 16px;
+        padding-top: 3vh;
+        cursor: pointer;
+    }
+}
