registro e inicio de sesion con google

--- a/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.html
+++ b/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.html
@@ -84,13 +84,13 @@
   </ion-infinite-scroll>
 </ion-content>
 
-<!--
+
 <ion-footer>
   <ion-toolbar>
     <ion-tabs>
       <ion-tab-bar slot="bottom" class="ion-justify-content-around">
-        <ion-tab-button (click)="irEditorConPrimerProyectoDeLista();">
-          <ion-icon name="pencil-outline"></ion-icon>
+        <ion-tab-button (click)="refreshGoogle();">
+          <ion-icon name="refresh"></ion-icon>
         </ion-tab-button>
         
         <ion-tab-button (click)="irInicioTraductor();">
@@ -99,4 +99,4 @@
       </ion-tab-bar>
     </ion-tabs>
   </ion-toolbar>
-</ion-footer>-->
+</ion-footer>
