--- a/scrip-trad/src/app/pages/login/login.page.html
+++ b/scrip-trad/src/app/pages/login/login.page.html
@@ -97,13 +97,20 @@
               ></ion-icon
               >Continuar con Facebook</ion-button
             >-->
-            <ion-button expand="block" class="fontBtn"
+            <ion-button expand="block" class="fontBtn" (click)="loginGoogle();"
               ><ion-icon
                 name="logo-google"
                 style="padding-right: 5px;"
               ></ion-icon
               >Continuar con Google</ion-button
             >
+            <!--<ion-button expand="block" class="fontBtn" (click)="signOutGoogle();"
+              ><ion-icon
+                name="logo-google"
+                style="padding-right: 5px;"
+              ></ion-icon
+              >Sign out Google</ion-button
+            > -->
           </ion-card-content>
         </ion-card>
       </ion-col>
