problemas resueltos: trad final, fecha crear proyecto, cancelar registro

--- a/scrip-trad/src/app/pages/editor/editor.page.scss
+++ b/scrip-trad/src/app/pages/editor/editor.page.scss
@@ -60,4 +60,12 @@ ion-item-divider {
    font-size: 24px;
 }
 
+/*@media (min-width: 992px) {
+    #iconoTrad {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+    }
+}*/
+
 
