--- a/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.html
+++ b/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.html
@@ -84,7 +84,7 @@
   </ion-infinite-scroll>
 </ion-content>
 
-
+<!--
 <ion-footer>
   <ion-toolbar>
     <ion-tabs>
@@ -99,4 +99,4 @@
       </ion-tab-bar>
     </ion-tabs>
   </ion-toolbar>
-</ion-footer>
+</ion-footer>-->
