--- a/scrip-trad/src/app/pages/registro/registro.page.html
+++ b/scrip-trad/src/app/pages/registro/registro.page.html
@@ -134,6 +134,14 @@
               color="success"
               >Registrarme<ion-spinner *ngIf="waiting"></ion-spinner>
             </ion-button>
+
+            <!--Boton cancelar -->
+            <ion-button
+              (click)="volverLogin();"
+              expand="block"
+              color="light"
+              >Cancelar
+            </ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
