--- a/scrip-trad/src/app/pages/editor/editor.page.html
+++ b/scrip-trad/src/app/pages/editor/editor.page.html
@@ -45,10 +45,10 @@
           <!-- Titulo, cabecera-->
           <ion-col size="12" >
             <ion-row>
-              <ion-col size="11" class="ion-text-center">
+              <ion-col size="9" size-lg="11" class="ion-text-center">
                 <span style="font-weight: bold; padding-left: 8vw;">TM</span>
               </ion-col>
-              <ion-col size="1"  class="ion-text-center">
+              <ion-col size="3" size-lg="1" class="ion-text-center">
                <!--<ion-icon name="language-outline" style="color: #cc6b41" class="text-tertiary" button (click)="generarTraduccion();"></ion-icon>--> 
                 <img src="../../../assets/icon/translate.png" alt="traduccion automatica" button (click)="generarTraduccion();" id="iconoTrad">
               </ion-col>
