--- a/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.scss
+++ b/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.scss
@@ -49,6 +49,11 @@ ion-thumbnail {
     font-size: smaller;
 }
 
+.quote {
+    font-style: italic;
+    margin-top: 20vh;
+}
+
 @media (min-width: 992px) {
     #note {
         font-size: medium; 
