--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="cabecera ion-text-center" color="primary">
+  <ion-toolbar class="cabecera ion-text-center">
     <ion-icon name="home-outline" slot="start" class="inicio" (click)="irInicioGestor();"></ion-icon>
     <ion-title>Nuevo proyecto</ion-title>
     <!--Imagen de usuario logueado-->
