--- a/scrip-trad/src/app/pages/editor/editor.page.html
+++ b/scrip-trad/src/app/pages/editor/editor.page.html
@@ -26,7 +26,7 @@
             <ion-col size="10" style="display:flex; justify-content:center; font-weight: bold;">
               TO
             </ion-col>
-            <ion-col size="1" class="ion-align-self-start ion-text-end"><ion-icon name="chevron-forward-outline" button (click)="guardarTraduccionSegmento();" id="siguiente" ></ion-icon></ion-col>
+            <ion-col size="1" class="ion-align-self-start ion-text-end"><ion-icon name="chevron-forward-outline" id="siguiente" button (click)="guardarTraduccionSegmento();"></ion-icon></ion-col>
           </ion-row>
           <ion-row>
             <ion-col>
