--- a/scrip-trad/src/app/pages/registro/registro.page.scss
+++ b/scrip-trad/src/app/pages/registro/registro.page.scss
@@ -30,7 +30,7 @@ ion-item {
 }
 
 ion-grid {
-    //height: 100vh;
+    height: 97vh;
     background-image: url('../../../assets/img/bgRegistro2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
